# CAG-D-21-00842

./: CMakeLists.txt  EGT.cu  README.md  main.cpp
